# itkpix_dataflow

./: .gitmodules  CMakeLists.txt  README.md
configs/: rd53b_config_linksharing_primary.json  rd53b_config_linksharing_secondary.json  rd53b_conn_primary.json  rd53b_conn_secondary.json
exts/: CMakeLists.txt
scripts/: dump_block.py
src/: CMakeLists.txt
src/libHelpers/: rd53b_helpers.cpp
src/libHelpers/include/: rd53b_helpers.h
src/util/: CMakeLists.txt  clear_tot_mem.cpp  configure_chip.cpp  fifo_write.cpp  prep_primary.cpp  prep_secondary.cpp  start_triggers.cpp  test.cpp  test_link_sharing.cpp
